; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/core/seq/extr_seq_midi_event.c_snd_midi_event_reset_decode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/core/seq/extr_seq_midi_event.c_snd_midi_event_reset_decode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_midi_event = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @snd_midi_event_reset_decode(%struct.snd_midi_event* %0) #0 {
  %2 = alloca %struct.snd_midi_event*, align 8
  %3 = alloca i64, align 8
  store %struct.snd_midi_event* %0, %struct.snd_midi_event** %2, align 8
  %4 = load %struct.snd_midi_event*, %struct.snd_midi_event** %2, align 8
  %5 = getelementptr inbounds %struct.snd_midi_event, %struct.snd_midi_event* %4, i32 0, i32 1
  %6 = load i64, i64* %3, align 8
  %7 = call i32 @spin_lock_irqsave(i32* %5, i64 %6)
  %8 = load %struct.snd_midi_event*, %struct.snd_midi_event** %2, align 8
  %9 = getelementptr inbounds %struct.snd_midi_event, %struct.snd_midi_event* %8, i32 0, i32 0
  store i32 255, i32* %9, align 4
  %10 = load %struct.snd_midi_event*, %struct.snd_midi_event** %2, align 8
  %11 = getelementptr inbounds %struct.snd_midi_event, %struct.snd_midi_event* %10, i32 0, i32 1
  %12 = load i64, i64* %3, align 8
  %13 = call i32 @spin_unlock_irqrestore(i32* %11, i64 %12)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
